# solara

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  RustQJSDom.7z  RustQJSDom.md  preview.html
.github/workflows/: publish.yml
crates/solara-wgpu-shim/: Cargo.toml  README.md
crates/solara-wgpu-shim/src/: lib.rs  shape.wgsl  text_only.rs
docs/: demoui.css  demoui.html  elements.md  engine-handoff.md
src/: main.rs  trueos_app.rs
src/gpu_ui/: app.rs  draw.rs  geometry.rs  layout.rs  loader.rs  mod.rs  renderer.rs  shapes.rs  text.rs
src/gpu_ui/css/: engine.rs  mod.rs  resolve.rs
src/gpu_ui/html/: demoui.rs  layout.rs  mod.rs  node.rs  paint.rs  parser.rs  style.rs
src/gpu_ui/shaders/: triangle.wgsl
