[package]
name = "solara"
version = "0.0.6"
edition = "2024"
authors = ["iamwjun","t4ce"]
description = "A small experimental browser built with Rust and QuickJS."
readme = "README.md"
license = "MIT"
repository = "https://github.com/iamwjun/solara"
homepage = "https://github.com/iamwjun/solara"
keywords = ["browser", "quickjs", "rust", "web", "renderer"]
categories = ["gui", "web-programming"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "rust-toolchain.toml",
    "LICENSE",
    "README.md",
    "preview.html",
    "src/**/*.rs",
    "src/**/*.wgsl",
    "src/gpu_ui/fonts/*",
    "docs/demoui.html",
    "docs/demoui.css",
    "docs/engine-handoff.md",
]

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:wgpu_text"]

[dependencies]
env_logger = "0.11.11"
rust-qjs-dom = { version = "0.1.0", path = "vendor/RustQJSDom" }
ureq = "3.3.0"
url = "2"
wgpu = { version = "30.0.0", optional = true }
wgpu_text = { version = "30.0.0", optional = true }
winit = "0.30"
