[package]
name = "solara"
version = "0.0.6"
edition = "2024"
authors = ["iamwjun","t4ce"]
description = "A small experimental browser built with Rust and QuickJS."
readme = "README.md"
license = "MIT"
repository = "https://github.com/iamwjun/solara"
homepage = "https://github.com/iamwjun/solara"
keywords = ["browser", "quickjs", "rust", "web", "renderer"]
categories = ["gui", "web-programming"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "rust-toolchain.toml",
    "LICENSE",
    "README.md",
    "preview.html",
    "src/**/*.rs",
    "src/**/*.wgsl",
    "crates/solara-wgpu-shim/**",
    "docs/demoui.html",
    "docs/demoui.css",
    "docs/engine-handoff.md",
]

[features]
default = ["gpu"]
gpu = ["dep:solara-wgpu-shim"]

[dependencies]
env_logger = "0.11.11"
rust-qjs-dom = { version = "0.1.0", path = "vendor/RustQJSDom" }
solara-wgpu-shim = { version = "0.1.0", path = "crates/solara-wgpu-shim", optional = true }
ureq = "3.3.0"
url = "2"
winit = "0.30"

[workspace]
members = ["crates/solara-wgpu-shim"]
exclude = ["vendor/RustQJSDom"]
resolver = "3"
